// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewRating should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
    data-testid="ReviewRating"
  >
    <div
      class="relative"
    >
      <div
        class="overflow-hidden absolute"
        style="width: 12.5%;"
      >
        <svg
          class="w-4 text-theme-warning-400"
        >
          star.svg
        </svg>
      </div>
      <svg
        class="w-4 text-theme-secondary-500 dark:bg-theme-secondary-700"
      >
        star.svg
      </svg>
    </div>
    <span
      class="ml-1"
    >
      1.5
    </span>
  </div>
</DocumentFragment>
`;

exports[`ReviewRating should render dash if no rating 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
    data-testid="ReviewRating"
  >
    <div
      class="relative"
    >
      <svg
        class="w-4 text-theme-secondary-500 dark:bg-theme-secondary-700"
      >
        star.svg
      </svg>
    </div>
    <span
      class="ml-1"
    >
      -
    </span>
    <span
      class="text-theme-secondary-500"
    >
      /5
    </span>
  </div>
</DocumentFragment>
`;

exports[`ReviewRating should render with total 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
    data-testid="ReviewRating"
  >
    <div
      class="relative"
    >
      <div
        class="overflow-hidden absolute"
        style="width: 12.5%;"
      >
        <svg
          class="w-4 text-theme-warning-400"
        >
          star.svg
        </svg>
      </div>
      <svg
        class="w-4 text-theme-secondary-500 dark:bg-theme-secondary-700"
      >
        star.svg
      </svg>
    </div>
    <span
      class="ml-1"
    >
      1.5
    </span>
    <span
      class="text-theme-secondary-500"
    >
      /5
    </span>
  </div>
</DocumentFragment>
`;
